--- a/dermal-auth/appsettings.json
+++ b/dermal-auth/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
+    "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=DermalAuth;Trusted_Connection=True;MultipleActiveResultSets=True",
     "DermalAuthDb": "Server=tcp:dermal-sql.database.windows.net,1433;Initial Catalog=dermaldb;Persist Security Info=False;User ID=dermaladmin;Password=39v0UPsls2pZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
