--- a/dermal-auth/appsettings.json
+++ b/dermal-auth/appsettings.json
@@ -2,5 +2,7 @@
   "ConnectionStrings": {
     "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=DermalAuth;Trusted_Connection=True;MultipleActiveResultSets=True",
     "DermalAuthDb": "Server=tcp:dermal-sql.database.windows.net,1433;Initial Catalog=dermaldb;Persist Security Info=False;User ID=dermaladmin;Password=39v0UPsls2pZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  },
+  "AngularClientHost": "http://localhost:5000",
+  "ApiHost":  "http://localhost:5001"
 }
